--- a/vghtc.html
+++ b/vghtc.html
@@ -20,53 +20,23 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
 <div class="bgded overlay light" style="background-image:url('images/demo/backgrounds/01.png');">
-  <!-- ################################################################################################ -->
-  <div class="wrapper row1">
-    <header id="header" class="hoc clear">
-      <!-- ################################################################################################ -->
-      <div id="logo" class="fl_left">
-        <h1><a href="index.html">輔導會金字塔三級醫療整合照護</a></h1>
-      </div>
-      <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li class="active"><a href="index.html">首頁</a></li>
-          <li><a class="drop" href="#">台中榮總</a>
-            <ul>
-              <li><a href="pages/gallery.html">一、遠距視訊醫療作業介紹</a>
-                <ul>
-                  <li><a href="#">5G遠距視訊診療</a></li>
-                  <li><a href="#">居家攜帶型超音波掃描</a></li>
-                </ul>
-              </li>
-              <li><a href="pages/full-width.html">二、多元健康服務設計與推動</a>
-                <ul>
-                  <li><a href="#">營養-得舒飲食</a></li>
-                  <li><a href="#">復健-腳踏車式輪椅</a></li>
-                </ul>
-              </li>
-              <li><a href="pages/sidebar-left.html">三、ACP推動</a>
-                <ul>
-                  <li><a href="#">非藥物治療-體適能</a></li>
-                  <li><a href="#">非藥物治療-認知促進</a></li>
-                </ul>
-              </li>
-              <li><a href="pages/sidebar-right.html">四、專業醫療能力訓練</a>
-                <ul>
-                  <li><a href="#">ACP推動-預立醫療自主計畫</a></li>
-                  <li><a href="#">雲端醫療課程輪播</a></li>
-                </ul>
-              </li>
-              <!--<li><a href="pages/basic-grid.html">Basic Grid</a></li>!-->
-            </ul>
-          </li>
-          <!--<li><a href="#">Link Text</a></li>
-          <li><a href="#">Link Text</a></li>
-          !-->
-        </ul>
-      </nav>
-      <!-- ################################################################################################ -->
-    </header>
-  </div>
+    <!-- ################################################################################################ -->
+    <div class="wrapper row1">
+      <header id="header" class="hoc clear">
+        <!-- ################################################################################################ -->
+        <div id="logo" class="fl_left">
+
+          <a href="index.html">
+                <img src="images/demo/logo.png" alt="top4" style="max-width:32%">
+          </a>
+          </h1>
+
+
+        </div>
+
+        <!-- ################################################################################################ -->
+      </header>
+    </div>
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
