--- a/vghks.html
+++ b/vghks.html
@@ -25,45 +25,15 @@ Licence URI: https://www.os-templates.com/template-terms
     <header id="header" class="hoc clear">
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">輔導會金字塔三級醫療整合照護</a></h1>
+
+        <a href="index.html">
+              <img src="images/demo/logo.png" alt="top4" style="max-width:32%">
+        </a>
+        </h1>
+
+
       </div>
-      <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li class="active"><a href="index.html">首頁</a></li>
-          <li><a class="drop" href="#">台中榮總</a>
-            <ul>
-              <li><a href="pages/gallery.html">一、遠距視訊醫療作業介紹</a>
-                <ul>
-                  <li><a href="#">5G遠距視訊診療</a></li>
-                  <li><a href="#">居家攜帶型超音波掃描</a></li>
-                </ul>
-              </li>
-              <li><a href="pages/full-width.html">二、多元健康服務設計與推動</a>
-                <ul>
-                  <li><a href="#">營養-得舒飲食</a></li>
-                  <li><a href="#">復健-腳踏車式輪椅</a></li>
-                </ul>
-              </li>
-              <li><a href="pages/sidebar-left.html">三、ACP推動</a>
-                <ul>
-                  <li><a href="#">非藥物治療-體適能</a></li>
-                  <li><a href="#">非藥物治療-認知促進</a></li>
-                </ul>
-              </li>
-              <li><a href="pages/sidebar-right.html">四、專業醫療能力訓練</a>
-                <ul>
-                  <li><a href="#">ACP推動-預立醫療自主計畫</a></li>
-                  <li><a href="#">雲端醫療課程輪播</a></li>
-                </ul>
-              </li>
-              <!--<li><a href="pages/basic-grid.html">Basic Grid</a></li>!-->
-            </ul>
-          </li>
-          <!--<li><a href="#">Link Text</a></li>
-          <li><a href="#">Link Text</a></li>
-          !-->
-        </ul>
-      </nav>
+
       <!-- ################################################################################################ -->
     </header>
   </div>
@@ -77,15 +47,15 @@ Licence URI: https://www.os-templates.com/template-terms
         <li>
           <article>
             <p></p>
-            <h3 class="heading">輔導會金字塔計畫目標</h3>
-            <img src="images/demo/top4.png" alt="top4">
+            <h3 class="heading"></h3>
+            <img src="images/page/3-1.png">
           </article>
         </li>
         <li>
           <article>
             <p></p>
-            <h3 class="heading">醫養雙塔搭配 三級照護整合</h3>
-            <img src="images/demo/level3.png" alt="">
+            <h3 class="heading"></h3>
+            <img src="images/page/3-2.png" alt="">
             <!--
             <footer>
               <form class="group" method="post" action="#">
@@ -111,70 +81,6 @@ Licence URI: https://www.os-templates.com/template-terms
       </ul>
     </div>
     <!--  ################################################################################################ -->
-    <hr class="btmspace-80">
-    <div class="wrapper row3">
-      <main class="hoc container clear">
-        <!-- main body -->
-        <!-- ################################################################################################ -->
-        <article class="group btmspace-80">
-          <div class="two_third first"><img class="borderedbox inspace-10" src="images/demo/first.png" alt=""></div>
-          <div class="one_third">
-            <h6 class="heading">遠距視訊醫療</h6>
-            <ul class="nospace meta">
-              <li><i class="fa fa-user"></i> <a href="#">5G遠距視訊診療</a></li>
-              <li><i class="fa fa-tag"></i> <a href="#">居家攜帶型超音波掃描</a></li>
-            </ul>
-            <p>背景說明：</p>
-              <p>為擴大榮家醫療照護能力與品質，減少榮家住民往返醫院看病的次數，讓榮民在榮家門診就可獲得即時與適切的醫療照顧。</p>
-              <p>執行目的:</p>
-                <p>為提供民眾更完整、適切的醫療，且讓榮家及偏遠地區之民眾，能獲得專業技能及醫療服務，而發展出遠距視訊醫療。</p>
-              <footer class="nospace"><a class="btn" href="#">Full Story &raquo;</a></footer>
-          </div>
-        </article>
-        <article class="group btmspace-80">
-          <div class="two_third first"><img class="borderedbox inspace-10" src="images/demo/660x360.png" alt=""></div>
-          <div class="one_third">
-            <h6 class="heading">Per inceptos himenaeos donec lacinia mollis vel</h6>
-            <ul class="nospace meta">
-              <li><i class="fa fa-user"></i> <a href="#">Admin</a></li>
-              <li><i class="fa fa-tag"></i> <a href="#">Tag Name</a></li>
-            </ul>
-            <p>Aliquam mauris morbi tristique orci sit amet sapien tincidunt ut rutrum dui tincidunt.</p>
-            <p class="btmspace-30">Cras eget lacinia magna nunc ut est est cras aliquam erat sem at dapibus lorem luctus sed nunc sagittis leo in&hellip;</p>
-            <footer class="nospace"><a class="btn" href="#">Full Story &raquo;</a></footer>
-          </div>
-        </article>
-        <article class="group btmspace-80">
-          <div class="two_third first"><img class="borderedbox inspace-10" src="images/demo/660x360.png" alt=""></div>
-          <div class="one_third">
-            <h6 class="heading">Per inceptos himenaeos donec lacinia mollis vel</h6>
-            <ul class="nospace meta">
-              <li><i class="fa fa-user"></i> <a href="#">Admin</a></li>
-              <li><i class="fa fa-tag"></i> <a href="#">Tag Name</a></li>
-            </ul>
-            <p>Aliquam mauris morbi tristique orci sit amet sapien tincidunt ut rutrum dui tincidunt.</p>
-            <p class="btmspace-30">Cras eget lacinia magna nunc ut est est cras aliquam erat sem at dapibus lorem luctus sed nunc sagittis leo in&hellip;</p>
-            <footer class="nospace"><a class="btn" href="#">Full Story &raquo;</a></footer>
-          </div>
-        </article>
-        <article class="group btmspace-80">
-          <div class="two_third first"><img class="borderedbox inspace-10" src="images/demo/660x360.png" alt=""></div>
-          <div class="one_third">
-            <h6 class="heading">Per inceptos himenaeos donec lacinia mollis vel</h6>
-            <ul class="nospace meta">
-              <li><i class="fa fa-user"></i> <a href="#">Admin</a></li>
-              <li><i class="fa fa-tag"></i> <a href="#">Tag Name</a></li>
-            </ul>
-            <p>Aliquam mauris morbi tristique orci sit amet sapien tincidunt ut rutrum dui tincidunt.</p>
-            <p class="btmspace-30">Cras eget lacinia magna nunc ut est est cras aliquam erat sem at dapibus lorem luctus sed nunc sagittis leo in&hellip;</p>
-            <footer class="nospace"><a class="btn" href="#">Full Story &raquo;</a></footer>
-          </div>
-        </article>
-        <!-- ################################################################################################ -->
-        <!-- / main body -->
-        <div class="clear"></div>
-      </main>
-    </div>
 </div>
 <!-- End Top Background Image Wrapper -->
 <!-- JAVASCRIPTS -->
