--- a/vghtpe.html
+++ b/vghtpe.html
@@ -25,68 +25,27 @@ Licence URI: https://www.os-templates.com/template-terms
     <header id="header" class="hoc clear">
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <img src="images/demo/logo.png" alt="top4" style="max-width:32%">
-
+        <a href="index.html">
+              <img src="images/demo/logo.png" alt="top4" style="max-width:32%">
+        </a>
         </h1>
-        <nav id="mainav" class="fl_right">
-          <ul class="clear">
-            <li><a class="drop" href="index.html">台北榮總</a>
-              <ul>
-                <li><a href="#">人臉辨識系統</a>
-                </li>
-                <li><a href="#">多感官刺激互動</a>
-                </li>
-                <li><a href="#">房內活動監測地墊</a>
-                </li>
-                <li><a href="#">板橋火車站_返鄉列車體驗</a>
-                </li>
-                <li><a href="#">智慧床墊</a>
-                </li>
-                <li><a href="#">智慧科技多功能活動室</a>
-                </li>
-                <li><a href="#">智慧科技多功能活動室</a>
-                </li>
-                <!--<li><a href="pages/basic-grid.html">Basic Grid</a></li>!-->
-              </ul>
-            <li><a class="drop" href="vghtc.html">台中榮總</a>
-              <ul>
-                <li><a href="#">一、遠距視訊醫療作業介紹</a>
-                  <ul>
-                    <li><a href="#">5G遠距視訊診療</a></li>
-                    <li><a href="#">居家攜帶型超音波掃描</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">二、多元健康服務設計與推動</a>
-                  <ul>
-                    <li><a href="#">營養-得舒飲食</a></li>
-                    <li><a href="#">復健-腳踏車式輪椅</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">三、ACP推動</a>
-                  <ul>
-                    <li><a href="#">非藥物治療-體適能</a></li>
-                    <li><a href="#">非藥物治療-認知促進</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">四、專業醫療能力訓練</a>
-                  <ul>
-                    <li><a href="#">ACP推動-預立醫療自主計畫</a></li>
-                    <li><a href="#">雲端醫療課程輪播</a></li>
-                  </ul>
-                </li>
-                <!--<li><a href="pages/basic-grid.html">Basic Grid</a></li>!-->
-              </ul>
-            <li><a class="drop" href="index.html">高雄榮總</a>
-            </li>
-            <!--<li><a href="#">Link Text</a></li>
-            <li><a href="#">Link Text</a></li>
-            !-->
-          </ul>
-        </nav>
+
       </div>
 
       <!-- ################################################################################################ -->
     </header>
+  </div>
+  <div id="breadcrumb" class="hoc clear">
+    <!-- ################################################################################################ -->
+    <ul>
+      <li><a href="#">人臉辨識系統</a></li>
+      <li><a href="#">多感官刺激互動</a></li>
+      <li><a href="#">房內活動監測地墊</a></li>
+      <li><a href="#">智慧床墊</a></li>
+      <li><a href="#">智慧科技多功能活動室</a></li>
+      <li><a href="#" style="color:#474747">輔具巡迴服務與新創輔具 (身障重建中心)</a></li>
+    </ul>
+    <!-- ################################################################################################ -->
   </div>
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
