--- a/vghks.html
+++ b/vghks.html
@@ -9,7 +9,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>臺中榮民總醫院高齡醫學中心</title>
+<title>高雄榮民總醫院</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -27,7 +27,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <div id="logo" class="fl_left">
 
         <a href="index.html">
-              <img src="images/demo/logo.png" alt="top4" style="max-width:32%">
+              <img src="images/demo/logo.png" alt="top4" style="max-width:40%">
         </a>
         </h1>
 
